(executable
 (name punchboy)
 (libraries js_of_ocaml-lwt)
 (modes byte)
 (preprocess
  (pps js_of_ocaml-ppx)))

(rule
 (targets main.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --source-map
   %{dep:punchboy.bc}
   -o
   %{targets}
   --pretty)))

(alias
 (name default)
 (deps
  main.js
  index.html
  (glob_files fonts/*)
  (glob_files styles/*)))
