(executable
 (name punchboy)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (libraries js_of_ocaml-tyxml zed))

(rule
 (targets main.js)
 (deps punchboy.bc.js)
 (action
  (copy punchboy.bc.js main.js)))

(alias
 (name default)
 (deps
  main.js
  index.html
  (glob_files fonts/*)
  (glob_files styles/*)))
